--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta property="og:image" content="http://www.google.com/get/sunroof/sunroof-animation.gif"/>
 </head>
 <body>
-George's Facebook sharing test
+George's Facebook sharing test.
      <a class="share-link facebook-button"
          href="https://www.facebook.com/sharer/sharer.php?u="
          target="_blank"
