--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 <title>George Ruban at GitHub</title>
-<meta property="og:image" content="http://www.google.com/get/sunroof/sunroof-animation.gif"/>
+<meta property="og:image" content="http://www.google.com/get/sunroof/sunroof-animation.mp4"/>
 </head>
 <body>
 George's Facebook sharing test.
