more mp4 as og:video

--- a/facebook_test2.html
+++ b/facebook_test2.html
@@ -1,6 +1,10 @@
 <head>
 <title>Facebook video test?</title>
-<meta property="og:video" content="http://www.google.com/get/sunroof/sunroof-animation.mp4"/>
+<meta property="og:video" content="https://www.google.com/get/sunroof/sunroof-animation.mp4"/>
+<meta property="og:video:secure_url" content="https://www.google.com/get/sunroof/sunroof-animation.mp4"/>
+<meta property="og:video:type" content="video/mp4"/>
+<meta property="og:video:width" content="1280"/>
+<meta property="og:video:height" content="436"/>
 <meta property="og:site_name" content="OG Test Page Site Name"/>
 <meta property="og:title" content="OG Facebook Video Test"/>
 <meta property="og:description" content="My Site Description"/>
